deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meuifpoa-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Usado para reescrever o caminho
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
spec:
  tls:
  - hosts:
    - app.poa.ifrs.edu.br
    secretName: tls-secret
  rules:
  - host: app.poa.ifrs.edu.br
    http:
      paths:
      - path: /meuifpoa(/|$)(.*) # Captura o caminho /teste e tudo o que vem depois
        pathType: Prefix
        backend:
          service:
            name: meuifrspoa-service # Nome do serviço a ser chamado internamente
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: meuifrspoa-service
spec:
  selector:
    app: meuifrspoa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meuifrspoa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meuifrspoa
  template:
    metadata:
      labels:
        app: meuifrspoa
    spec:
      containers:
        - name: meuifrspoa
          image: leogoandete/app-ifrsback-jsoup
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
